Closed Bug 1615851 Opened 5 years ago Closed 5 years ago

Crash in ImageBitmap::ToCloneData when running webgl/sdk/tests/conformance2/textures/image_bitmap_from_video/tex-2d-r32f-red-float.html?webglVersion=2&quiet=0&quick=1

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox74 --- wontfix
firefox75 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

()

Details

Crash Data

Attachments

(1 file)

No description provided.
Crash Signature: mozilla::dom::ImageBitmap::ToCloneData → [@ mozilla::dom::ImageBitmap::ToCloneData ]

This fixes a crash, where we expected it to be infallible.

Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/fb59957df144 layer::Image::GetAsSourceSurface is fallible. r=lsalzman
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75

It's hard to tell but we should at least be asserting at all these points.
I'm not worried about uplifting the fix here to Beta, given that the only crashes are pretty much just me. :)
I'll shave this yak on Tuesday. Thanks for checking up on this!

Flags: needinfo?(jgilbert)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: