Bug 1615851 - layer::Image::GetAsSourceSurface is fallible. r=lsalzman

This fixes a crash, where we expected it to be infallible.

Differential Revision: https://phabricator.services.mozilla.com/D63005

--HG--
extra : moz-landing-system : lando